# euler

./: .editorconfig  002.py  _template.py  pyproject.toml
euler/: library.py  problem001.py  problem003.py  problem004.py  problem006.py  problem007.py  problem008.py  problem009.py  problem010.py
tests/: test_004.py  test_008.py
