[project]
name = "euler"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Forman", email = "mforman@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "black>=25.1.0,<26",
    "ruff>=0.12.3,<0.13",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # Enable import sorting (isort rules)
